# cap

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  setup.sh
.claude/: requirements.md
.claude/rules/: project-instructions.md  rust-standards.md
examples/: basic_capture.rs
src/: lib.rs  main.rs
src/capture/: device.rs  live.rs  mod.rs  offline.rs
src/filter/: bpf.rs  expression.rs  mod.rs
src/output/: console.rs  json.rs
src/protocol/: dns.rs  ethernet.rs  http.rs  ip.rs  mod.rs  parser.rs  tcp.rs  udp.rs
src/stats/: analyzer.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
