[package]
name = "cap"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance network packet capture and analysis tool"
license = "MIT"

[[bin]]
name = "cap"
path = "src/main.rs"

[dependencies]
# 抓包核心
pcap = "2.2"
etherparse = "0.17"

# 异步运行时
tokio = { version = "1.43", features = ["full"] }

# CLI 解析
clap = { version = "4.5", features = ["derive"] }

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 序列化（JSON 输出）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 终端输出
comfy-table = "7.1"
console = "0.15"

# TUI 可视化
ratatui = "0.30"
crossterm = "0.29"

# 时间处理
chrono = "0.4"

[dev-dependencies]
tempfile = "3.15"
